# examples/rewind_example/controllers/example.go
@@ -1,11 +1,12 @@
 package controllers
 
 import (
+	"rewind_example/entity"
+	"rewind_example/models"
+
 	"github.com/WeOps-Lab/rewind/lib/web/server"
 	"github.com/gofiber/contrib/fiberi18n/v2"
 	"github.com/gofiber/fiber/v2"
-	"rewind_example/entity"
-	"rewind_example/models"
 )
 
 type ExampleController struct{}
@@ -14,7 +15,7 @@ type ExampleController struct{}
 // @Accept json
 // @Produce json
 // @Success 200 {object} interface{}
-// @Router /api/public/example/hello [get]
+// @Router /reqApi/public/example/hello [get]
 func (receiver ExampleController) HelloWorld(c *fiber.Ctx) error {
 	helloMsg, _ := fiberi18n.Localize(c, "hello")
 	m := map[string]interface{}{}
@@ -23,7 +24,7 @@ func (receiver ExampleController) HelloWorld(c *fiber.Ctx) error {
 }
 
 // @Tags Example
-// @Router /api/internal/example/list [get]
+// @Router /reqApi/internal/example/list [get]
 // @Accept json
 // @Produce json
 // @Success 200 {object} entity.ExampleListResponse
@@ -33,7 +34,7 @@ func (receiver ExampleController) List(c *fiber.Ctx) error {
 
 // @Tags Example
 // @Param id path string true "id"
-// @Router /api/internal/example/{id} [get]
+// @Router /reqApi/internal/example/{id} [get]
 // @Accept json
 // @Produce json
 // @Success 200 {object} entity.ExampleItemResponse
@@ -43,7 +44,7 @@ func (receiver ExampleController) GetEntity(c *fiber.Ctx) error {
 
 // @Tags Example
 // @Param id path string true "id"
-// @Router /api/internal/example/{id} [delete]
+// @Router /reqApi/internal/example/{id} [delete]
 // @Accept json
 // @Produce json
 // @Success 200 {object} interface{}
@@ -53,7 +54,7 @@ func (receiver ExampleController) DeleteEntity(c *fiber.Ctx) error {
 
 // @Tags Example
 // @Param req body entity.ExampleCreateRequest true "entity"
-// @Router /api/internal/example [post]
+// @Router /reqApi/internal/example [post]
 // @Accept json
 // @Produce json
 // @Success 200 {object} interface{}
@@ -74,7 +75,7 @@ func (receiver ExampleController) CreateEntity(c *fiber.Ctx) error {
 // @Tags Example
 // @Produce json
 // @Param req body entity.ExampleUpdateRequest true "entity"
-// @Router /api/internal/example [put]
+// @Router /reqApi/internal/example [put]
 // @Accept json
 // @Produce json
 // @Success 200 {object} interface{}
